package View;

public interface MenuCommand {

   void showCommand();
   void execute();

}
